--- a/Stylesheets/payments.css
+++ b/Stylesheets/payments.css
@@ -14,6 +14,7 @@ html{
 }
 
 body{
+    height: 100vh;
     background-color: black;
     overflow: hidden;
 
@@ -99,6 +100,7 @@ main{
     display: flex;
     flex-direction: column;
     gap: 20px;
+    height: 100vh;
 }
 
 #main01{
@@ -113,27 +115,23 @@ main{
 
 .formContainer{
     border-radius: 20px;
-    width: 80%;
-    height: 100%;
-
-    display: flex;
-    flex-direction: column;
+    width: 100%;
+    height: calc(100vh - 100px);
     gap: 20px;
     padding-left:30px;
 }
 
 /*===== Details Section =============================================*/
 
-.personalDetailsSection, .paymentDetailsSection{
-    display: flex;
-    align-items: center;
-    padding: 10px 0;
-}
-
-.paymentContainer{
+#paymentForm{
+    padding-bottom: 20px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 20px;
+
+    width: 90%;
+    height:100%;
 }
 
 .spanTitle{
@@ -147,14 +145,6 @@ main{
     display: flex;
     flex-direction: column;
     gap: 20px;
-}
-
-#visaPaymentDetails{
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-
 }
 
 #exDate, #code{
@@ -261,9 +251,9 @@ textarea{
 
 /*===== Order Info Table =====================================================*/
 .orderInfoContainer{
-    padding: 10px 30px;
+    padding: 0px 30px;
     width: 60%;
-    height: 100%;
+    height: calc(100vh - 100px);
     border-radius: 20px;
 
     display: flex;
