--- a/Stylesheets/style2.css
+++ b/Stylesheets/style2.css
@@ -56,6 +56,7 @@ header{
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     padding: 20px;
+    padding-bottom: 2px;
 
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
