--- a/Stylesheets/style2.css
+++ b/Stylesheets/style2.css
@@ -156,7 +156,7 @@ nav{
     flex-wrap: nowrap;
 }
 
-.navigation a:hover{
+.navLinks:hover{
     scale: 1.1;
     background-color: var(--subback-color);
     border-color: var(--subback-color);
@@ -197,18 +197,16 @@ nav{
     flex-direction: column;
     align-items: start;
     padding: 5px 10px;
-    width: 200px;
+    width: 600px;
+    height: 200px;
     border-radius: 15px;
     border: 2px solid var(--accent-color);
-    transform: translateX(-35%);
+    transform: translateX(-85%);
 }
 
 
-#dropdown a:hover{
-    scale: 1;
-    background-color: var(--subback-color);
-    width: 100%;
-    border-radius: 10px;
+#dropdown li{
+    width: 200px;
 }
 
 #dropdown a{
@@ -224,6 +222,51 @@ nav{
     display: block !important;
 }
 
+.filterContainer{
+    border-left: 2px solid;
+    width:350px;
+    height: 190px;
+    position: absolute;
+    top: 5px;
+    transform: translateX(55%);
+    display: flex;
+    flex-direction: column;
+    display: none;
+    padding-left: 30px;
+}
+
+.filterContainer button{
+    width: fit-content;
+    background-color: transparent;
+    border: none;
+    color: white;
+}
+
+.filterContainer button:hover{
+    color: var(--accent-color);
+}
+
+#peripheralsFilterContainer,#accessoriesFilterContainer{
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.subFilterSections{
+    display: flex;
+    flex-direction: column;
+}
+
+#consoleLink:hover #consoleFilterContainer{
+    display: flex;
+}
+
+#periLink:hover #peripheralsFilterContainer{
+    display: flex;
+}
+
+#accLink:hover #accessoriesFilterContainer{
+    display: flex;
+}
 /*=====Search bar=============================================================*/
 
 header #search_bar{
