--- a/Stylesheets/accessories-style.css
+++ b/Stylesheets/accessories-style.css
@@ -22,7 +22,7 @@ body{
 main{
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: auto auto 1fr;
+    grid-template-rows: auto 1fr;
 
     gap: 10px;
 }
@@ -74,49 +74,6 @@ main{
 
 }
 
-/*=====navigation Part========================================================*/
-
-.store-nav{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    grid-row: 2;
-    height: 150px;
-}
-
-.store-nav a{
-    width: 400px;
-    padding: 20px;
-    position: absolute;
-
-    font-family: var(--Title-font);
-    font-size: 25px;
-    display: flex;
-    align-items: center;
-}
-
-.store-nav a:hover{
-    scale: 1.05;
-    transition: .1s ease-in-out;
-}
-
-#con-nav{
-    border-radius: 30px 0 0 30px;
-    clip-path: polygon(0 0, 0 100%, 90% 100%, 100% 0);
-    transform: translateX(-46%);
-    background-color: var(--subback-color);
-    border: 2px var(--color1) solid;
-}
-
-#peri-nav{
-    border-radius: 0 30px 30px 0;
-    clip-path: polygon(10% 0, 0 100%, 100% 100%, 100% 0);
-    transform: translateX(46%);
-    background-color: rgba(0, 0, 0, 0.438);
-    backdrop-filter: blur(9px);
-    border: 2px var(--subback-color) solid;
-}
-
 /*=====Store items Part=======================================================*/
 
 .items{
@@ -132,6 +89,7 @@ main{
     gap: 30px;
     margin-top: 30px;
 }
+
 
 .slot-name{
     font-family: var(--Title-font);
