--- a/Stylesheets/payments.css
+++ b/Stylesheets/payments.css
@@ -318,3 +318,65 @@ textarea{
     transform: scale(70);
     transition: transform .45s ease-out;
 }
+
+
+/* ===== Media Queries ====================================================== */
+@media (max-width:1200px) {
+    body{
+        grid-template-columns: auto;
+        grid-template-rows: 350px auto;
+        overflow-y: scroll;
+    }
+
+    #main01{
+        grid-column: 1/2;
+        grid-row: 1/2;
+        align-items: center;
+    }
+
+    #main02{
+        grid-column: 1/2;
+        grid-row: 2/3;
+        align-items: center;
+    }
+
+    .formContainer{
+        display: flex;
+        width: 60vw;
+        height: 100%;
+        justify-content: center;
+        padding-left: 0;
+    }
+    #paymentForm{
+        width: 80%;
+        align-items: center;
+    }
+    #personalDetails ,#paypalPaymentDetails, #visaPaymentDetails,#paymentOptions{
+        width: 100%;
+        align-items: center;
+    }
+
+    .inputSections{
+        max-width: 25vw;
+        width: 25vw;
+    }
+}
+
+@media (max-width:880px) {
+    .formContainer{
+        width: 100vw;
+    }
+    #paymentForm{
+        width: 90%;
+    }
+    #personalDetails ,#paypalPaymentDetails, #visaPaymentDetails,#paymentOptions{
+        width: 100%;
+        align-items: center;
+    }
+
+    .inputSections{
+        max-width: 30vw;
+        min-width: 30vw;
+        width: 30vw;
+    }
+}
