--- a/Stylesheets/payments.css
+++ b/Stylesheets/payments.css
@@ -14,6 +14,7 @@ html{
 }
 
 body{
+    position: relative;
     height: 100vh;
     background-color: black;
     overflow: hidden;
@@ -473,4 +474,62 @@ textarea{
         min-width: 200px;
         width: 200px;
     }
+}
+
+/*===== Payment Notify =======================================================*/
+
+video{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+#paymentAlertContainer{
+    z-index: 100;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.405);
+    backdrop-filter: blur(7px);
+    -webkit-backdrop-filter: blur(7px);
+    display: none;
+}
+
+#paymentNotify{
+    position: absolute;
+    width: 300px;
+    height: 450px;
+    background-color: black;
+    border: 2px solid var(--accent-color);
+    border-radius: 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+#deliverMassage{
+    text-align: center;
+    text-wrap: wrap;
+    color: var(--accent-color);
+}
+
+.notifyCloseBtn{
+    width: 100px;
+    height: 30px;
+    color: var(--text-color);
+    background-color: transparent;
+    padding: 2px 5px;
+    border: 1px solid var(--subback-color);
+    border-radius: 5px;
+}
+
+.notifyCloseBtn:hover{
+    background-color: var(--subback-color);
+    transition: all .3s ease-out;
 }
