--- a/Stylesheets/payments.css
+++ b/Stylesheets/payments.css
@@ -488,7 +488,7 @@ video{
     z-index: 100;
     position: absolute;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.405);
     backdrop-filter: blur(7px);
     -webkit-backdrop-filter: blur(7px);
