--- a/Stylesheets/peripherals-style.css
+++ b/Stylesheets/peripherals-style.css
@@ -258,7 +258,7 @@ main{
 
     .card .item-pic{
         width: 100px;
-        height: 50%;
+        height: 100px;
         border-radius: 15px 15px 0 0;
     }
 
