--- a/Stylesheets/style2.css
+++ b/Stylesheets/style2.css
@@ -247,7 +247,7 @@ nav{
     flex-direction: column;
 }
 
-#conLink:hover #consoleFilterContainer{
+#consoleLink:hover #consoleFilterContainer{
     display: flex;
 }
 
